# twitter-dialogue-crawler

./: .gitignore  README.md  balance.py  convert.py  crawl.py  pyproject.toml  requirements.txt
src/twitter_dialogue_crawler/: converter.py  crawler.py
